[package]
name = "m3u-filter"
version = "1.1.3"
edition = "2018"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0"
serde_json = "1"
serde-xml-rs = "0"
quick-xml = { version = "0", features = ["serialize"] }
regex = "1.7"
clap = { version = "4", features = ["derive"] }
url = "2.3"
reqwest = { version = "0", features = ["blocking", "json", "stream", "rustls-tls"] }
chrono = "0.4"
cron = "0"
actix-web = "4.3"
actix-server = "2.2"
actix-files = "0"
actix-cors = "0"
actix-rt = "2.8"
futures = "0.3"
path-absolutize = "3.0"
pest = "2.5"
pest_derive = "2.5"
enum-iterator = "1.3"
unidecode = "0"
petgraph = "0"
openssl = { version = "*", features = ["vendored"] } #https://docs.rs/openssl/0.10.34/openssl/#vendored
mime = "0.3"
log = "0.4"
env_logger = "0.10"
rustelebot = "0.3"
bincode = "1.3"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
lzma-rs = "0.3.0"