[package]
name = "m3u-filter"
version = "2.0.7"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.9.34"
serde_json = "1"
quick-xml = { version = "0.36", features = ["serialize"] }
regex = "1.11"
clap = { version = "4", features = ["derive"] }
url = "2.5"
reqwest = { version = "0", features = ["blocking", "json", "stream", "rustls-tls"] }
chrono = "0.4"
cron = "0.12"
actix-web = "4.9"
actix-server = "2.5"
actix-files = "0"
actix-cors = "0"
actix-rt = "2.10"
actix-web-httpauth = "0.8"
jsonwebtoken = "9.3"
rust-argon2 = "2.1"
futures = "0.3"
path-absolutize = "3.1"
pest = "2.7"
pest_derive = "2.7"
enum-iterator = "2"
unidecode = "0"
openssl = { version = "*", features = ["vendored"] } #https://docs.rs/openssl/0.10.34/openssl/#vendored
mime = "0.3"
log = "0.4"
env_logger = "0.11"
rustelebot = "0.3"
bincode = "1.3"
rand = "0.8"
rpassword = "7.3"
flate2 = "1"
time = "0.3"
blake3 = "1.5"
bytes = "1.8.0"
